<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context=".QuizHomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtVw_title_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="Cadastro"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="34sp" />

                <TextView
                    android:id="@+id/txtVw_label_id_jogador"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/label_id_jogador"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/edtTxt_id_jogador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:hint="@string/hint_digitar_id"
                    android:inputType="textPersonName"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txtVw_seed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:text="seed:" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_gravity="bottom"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2">

            <Button
                android:id="@+id/btn_sair"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/label_sair" />

            <Button
                android:id="@+id/btn_iniciar_quiz"
                android:layout_width="174dp"
                android:layout_height="79dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:text="@string/label_iniciar_quiz" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>